--- a/scss/_base.scss
+++ b/scss/_base.scss
@@ -6,8 +6,8 @@
 }
 body {
     background-color: #fff;
-    font-family: sans-serif;
-    line-height: 1.5;
+    font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    line-height: 1.2;
 
 }
 
